--- a/ink-flow/server/package.json
+++ b/ink-flow/server/package.json
@@ -2,8 +2,11 @@
     "name": "ink-flow",
     "version": "1.0.0",
     "dependencies": {
+        "@apollo/server": "^4.9.3",
         "apollo-server-express": "^3.12.1",
+        "bcrypt": "^5.1.1",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.5.1"
     },
     "scripts": {
